完成登录的模拟

--- a/LoginMvpDemo/app/src/main/res/layout/activity_login.xml
+++ b/LoginMvpDemo/app/src/main/res/layout/activity_login.xml
@@ -1,42 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <EditText
+        android:id="@+id/accout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="40dp"
         android:hint="请输入账号"
         android:textSize="15sp"
         android:textColor="#000"
-        android:id="@+id/accout"/>
+        />
     <EditText
+        android:id="@+id/pas_word"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="40dp"
-        android:inputType="textPassword"
+        android:hint="请输入密码"
         android:textSize="15sp"
-        android:textColor="#ccc"
-        android:id="@+id/pas_word"
-        android:hint="请输入密码"/>
+        android:textColor="#000"
+        />
     <Button
         android:id="@+id/sign_in"
-        android:background="@drawable/selector_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="登录"
-        android:layout_gravity="center"/>
-
-    <Button
-        android:id="@+id/mvp_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="跳转MVP登录"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:text="登录"
         android:background="@drawable/selector_button"/>
-
 </LinearLayout>
